# barley

./: .gitignore  LICENSE  Makefile  README.md
.github/workflows/: assemble.yml  docker-push-js.yml  docker-push-rs.yml  docker-push.yml
container/: docker-compose.yml
containers/: Dockerfile  docker-build.sh  docker-compose.yml  docker-push.sh  js.Dockerfile  js.build.sh  js.version.sh  rs-builder.Dockerfile  rs.Dockerfile  rs.build.sh  rs.version.sh  version.sh
project-js/: forge.config.js  main.js  package-lock.json  package.json  webpack.config.js
project-js-scripts/: build.sh
project-js/src/: main.js  preload.js
project-js/src-main/: main.js
project-js/src/js/: main.js
project-js/static/: index.html
project-rs/: Cargo.toml  Trunk.toml
project-rs/app/: Cargo.toml
project-rs/app-main/: Cargo.toml
project-rs/app-main/src/: lib.rs
project-rs/app-renderer/: Cargo.toml
project-rs/app-renderer/src/: js.rs  lib.rs
project-rs/app/src/: lib.rs  main.rs
project-rs/barley-main/: Cargo.toml
project-rs/barley-main/src/: lib.rs
project-rs/container-scripts/: build.sh
project-rs/src/: main.rs
project.js/: index.html  main.js  package.json
