[package]
name = "app-renderer"
version = "0.0.1"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17"
wasm-bindgen = "0.2.63"

[dependencies.web-sys]
version = "0.3.22"
features = ["console"]

# TODO: use wasm-opt=false only when debugging
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
